added navigation option in ios and android

--- a/examples/flutter_view/android/app/src/main/res/values/strings.xml
+++ b/examples/flutter_view/android/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
   <string name="app_name">Flutter View</string>
   <string name="title">Flutter Application</string>
   <string name="button_tap">Flutter button tapped 0 times.</string>
+  <string name="button_split_view">Split Flutter/Android View</string>
+  <string name="button_full_screen_view">Full Screen Flutter View</string>
+
   <string name="android">Android</string>
+
 </resources>
