--- a/examples/flutter_view/android/app/src/main/res/values/strings.xml
+++ b/examples/flutter_view/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
   <string name="title">Flutter Application</string>
   <string name="button_tap">Flutter button tapped 0 times.</string>
   <string name="android">Android</string>
+  <string name="switch_view">"Continue in Flutter view"</string>
 </resources>
